Clicking on Reports to call the Info Editor causes a crash. #69467

Closed
opened 2019-09-04 01:25:25 +02:00 by Zino Guerr · 4 comments

System Information
Operating system: Windows-10-10.0.1709 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.34

Blender Version
Broken: version: 2.81 (sub 5), branch: master, commit date: 2019-09-03 21:15, hash: 197653e087

Short description of error
Trying to access the Info Editor from the reports in the Statusbar causes a crashe everytime..this probably happens due to the new changes for the temp window and the File browser.

Exact steps for others to reproduce the error

  • With the default scense either delete the objects or use merge by distance.
  • Click on the Report to access the info Editor.
**System Information** Operating system: Windows-10-10.0.1709 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.34 **Blender Version** Broken: version: 2.81 (sub 5), branch: master, commit date: 2019-09-03 21:15, hash: `197653e087` **Short description of error** Trying to access the Info Editor from the reports in the Statusbar causes a crashe everytime..this probably happens due to the new changes for the temp window and the File browser. **Exact steps for others to reproduce the error** - With the default scense either delete the objects or use merge by distance. - Click on the Report to access the info Editor.
Author

Added subscriber: @Znio.G

Added subscriber: @Znio.G

This issue was referenced by 0c7bfdf9a5

This issue was referenced by 0c7bfdf9a50de0c98e7e9ee55511c842148dae6b
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Julian Eisel self-assigned this 2019-09-04 01:49:56 +02:00
Author

Thanks, that was super fast :)

Thanks, that was super fast :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69467
No description provided.